Bug 513374 - Opacity rule doesn't apply automatically
Summary: Opacity rule doesn't apply automatically
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: rules (other bugs)
Version First Reported In: 6.5.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-14 18:48 UTC by Samuele
Modified: 2025-12-18 05:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments
Screen recording (3.47 MB, video/webm)
2025-12-14 18:48 UTC, Samuele
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuele 2025-12-14 18:48:49 UTC
Created attachment 187640 [details]
Screen recording

SUMMARY
I added a rule for Picture in Picture windows of a browser to dim them. What I see is that the rule is only applied when I make a change in the ruleset and click "Apply" when the window already exists.

In the screen recording attached I show that opacity settings (both "active" and "inactive" and I'm not sure of the difference)  are set to "Force".

STEPS TO REPRODUCE
1. Create a rule for the window
2. Open the window
3. Change the rule

OBSERVED RESULT
The opacity rule is only applied when manually interacting with the Settings page.

EXPECTED RESULT
The opacity rule should be applied when the window is created.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 43
KDE Plasma Version: 6.5.3
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.1
Kernel Version: 6.17.10-300.fc43.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-2400 CPU @ 3.10GHz
Memory: 16 GiB of RAM (15.4 GiB usable)
Graphics Processor: llvmpipe
Manufacturer: LENOVO
Product Name: 7052A9G
System Version: ThinkCentre M91p
Comment 1 Bug Janitor Service 2025-12-15 10:37:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8566
Comment 2 Vlad Zahorodnii 2025-12-16 11:12:05 UTC
Git commit 76dc5a78d5fc8878aacd4f92b7821f30617b8d3b by Vlad Zahorodnii.
Committed on 16/12/2025 at 10:42.
Pushed by vladz into branch 'master'.

Apply opacity rule when starting to manage a window

A window may never get activated.

M  +1    -1    src/x11window.cpp
M  +1    -0    src/xdgshellwindow.cpp

https://invent.kde.org/plasma/kwin/-/commit/76dc5a78d5fc8878aacd4f92b7821f30617b8d3b