Apply opacity rule when starting to manage a window

A window may never get activated.

BUG: 513374